--- a/Tasks/Views/Base.lproj/Main.storyboard
+++ b/Tasks/Views/Base.lproj/Main.storyboard
@@ -60,10 +60,16 @@
                     <navigationItem key="navigationItem" title="Tasks" id="cp2-R4-DYE">
                         <barButtonItem key="rightBarButtonItem" image="plus.circle" catalog="system" id="wLK-9X-ZUU">
                             <connections>
-                                <segue destination="vK5-2X-Pbz" kind="presentation" modalPresentationStyle="fullScreen" id="Ump-Py-eFp"/>
+                                <segue destination="vK5-2X-Pbz" kind="presentation" identifier="CreateTaskModalSegue" modalPresentationStyle="fullScreen" id="Ump-Py-eFp"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="h2u-3C-aF5">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="X6M-4v-yBl" eventType="valueChanged" id="Vcj-vC-7b1"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dep-HI-vgt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -101,6 +107,9 @@
                                                     <constraint firstAttribute="width" constant="30" id="Y7f-Is-xGc"/>
                                                 </constraints>
                                                 <state key="normal" image="circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="toggleComplete:" destination="MYG-Qz-Ril" eventType="touchUpInside" id="YM6-kX-QpH"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
